# Haven_Contracts

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
contracts/haven_registry/: Cargo.toml
contracts/haven_registry/src/: device.rs  insurance.rs  killswitch.rs  lib.rs  recovery.rs  test.rs
contracts/haven_registry/test_snapshots/test/: test_confirm_recovery.1.json  test_file_insurance_claim_twice.1.json  test_get_device.1.json  test_recover_not_stolen.1.json  test_register_device.1.json  test_register_device_emits_event.1.json  test_report_stolen.1.json  test_report_stolen_negative_bounty.1.json  test_report_stolen_twice.1.json  test_report_stolen_valid_above_minimum_bounty.1.json  test_report_stolen_valid_minimum_bounty.1.json
docs/: EVENTS.md
docs/internal/: note_0.md  note_1.md  note_10.md  note_11.md  note_12.md  note_13.md  note_14.md  note_2.md  note_3.md  note_4.md  note_5.md  note_6.md  note_7.md  note_8.md  note_9.md
