[package]
name = "haven-registry"
version = "0.1.0"
edition = "2021"
description = "Haven: Decentralized Device Registry on Stellar/Soroban"
license = "MIT"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
